# AGi-Test

./: .gitignore  README.md  coqui_chatbot.py  kokoro_chatbot.py  pyproject.toml  requirements.txt  robot.py  test_GEP.py  test_GNSS_pos.py  test_chatbot.py  test_cuda.py  test_gpu.py  test_numpy.py  test_ofs.py  test_pytorch.ipynb  test_sensors.py  test_tensors2.py  test_tts.py  test_visualize_NEP.py  test_voice.py
archive/: pyproject.toml
assets/: bender.json  rei.json  sample.json
dev/: test_GNSS.py  test_NEP.py  test_gpt_sovits.py  test_kokoro.py  test_ollama.py  test_pyttsx3.py  test_realtimettspy  test_scrambling.py  test_tensorrt.py  test_tensors.py  test_tts.py
junk/: test_kokoro.py
models/: ASMR_voice.pt  neutral_voice.pt
