[project]
name = "AGi"
description = "Amazing GRACE infrastructure - Alpha Test"
version = "0.1.0.1025"
readme = "README.md"
license = { file = "LICENSE" }
keywords = ["AGi", "Artificial Intelligence", "Virtual Assistant", "Alpha Test"]
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Users/Consumers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: GNU Affero General Public License v3.0",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]
authors = [
    { name = "OppaAI", email = "oppa.ai.org@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "argon2-cffi>=25.1.0",
    "cn2an>=0.5.23",
    "cryptography>=45.0.6",
    "cupy-cuda12x>=13.6.0",
    "deepspeed>=0.17.6",
    "dotenv>=0.9.9",
    "en-core-web-sm",
    "faster-whisper>=1.2.0",
    "imutils>=0.5.4",
    "ipykernel>=6.30.1",
    "ipywidgets>=8.1.7",
    "jieba>=0.42.1",
    "kokoro-onnx>=0.4.9",
    "lhotse>=1.31.1",
    "lib>=4.0.0",
    "librosa>=0.11.0",
    "matplotlib>=3.10.5",
    "ollama>=0.5.4",
    "onnxruntime-gpu",
    "opencv-contrib-python",
    "pip>=25.2",
    "piper-phonemize>=1.1.0",
    "psycopg[binary]>=3.2.9",
    "pycuda",
    "pydantic>=2.11.7",
    "pyopenjtalk==0.4.0",
    "pypinyin>=0.55.0",
    "realtimetts[coqui,jp,kokoro]>=0.5.7",
    "silero-vad>=6.0.0",
    "smbus2>=0.5.0",
    "sounddevice>=0.5.2",
    "soundfile>=0.13.1",
    "spidev>=3.8",
    "torch",
    "torchaudio",
    "torchvision",
    "transformers==4.52.1",
    "vocos>=0.1.0",
    "webrtcvad>=2.0.10",
]

[project.urls]
Homepage = "https://oppa-ai.duckdns.org"
Documentation = "https://github.com/OppaAI/AGi/blob/main/README.md"
Repository = "https://github.com/OppaAI/AGi"
Issues = "https://github.com/OppaAI/AGi/issues"
Changelog = "https://github.com/OppaAI/AGi/blob/main/CHANGELOG.md"

[project.optional-dependencies]
gpu = [
    "onnxruntime-gpu",
]

[tool.uv]
override-dependencies = [
    "onnxruntime; sys_platform == 'never'",
    "onnxruntime-gpu",
]

[tool.uv.sources]
torchvision = { path = "../Downloads/torchvision-0.23.0-cp310-cp310-linux_aarch64.whl" }
pycuda = { path = "../Downloads/pycuda-2025.1.1-cp310-cp310-linux_aarch64.whl" }
opencv-contrib-python = { path = "../Downloads/opencv_contrib_python-4.12.0-cp310-cp310-linux_aarch64.whl" }
torchaudio = { path = "../Downloads/torchaudio-2.8.0-cp310-cp310-linux_aarch64.whl" }
torch = { path = "../Downloads/torch-2.8.0-cp310-cp310-linux_aarch64.whl" }
en-core-web-sm = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl" }
onnxruntime-gpu = { path = "../Downloads/onnxruntime_gpu-1.23.0-cp310-cp310-linux_aarch64.whl" }
